[gd_scene load_steps=132 format=2]

[ext_resource path="res://assets/UndeadDragon/UndeadDragon.webp" type="Texture" id=1]
[ext_resource path="res://Characters/scripts/UndeadDragon.gd" type="Script" id=2]
[ext_resource path="res://VisualEffects/Stars.tscn" type="PackedScene" id=3]
[ext_resource path="res://Characters/HealthBar.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/UndeadDragon/sideFlames.webp" type="Texture" id=5]
[ext_resource path="res://assets/transparent_pixel.png" type="Texture" id=6]
[ext_resource path="res://assets/UndeadDragon/forwardFlames.webp" type="Texture" id=7]
[ext_resource path="res://VisualEffects/BloodExplosion.tscn" type="PackedScene" id=9]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 1024, 512, 512 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1024, 1024, 512, 512 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 1536, 512, 512 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 512, 1024, 512, 512 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1536, 1024, 512, 512 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 512, 1536, 512, 512 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "prepare_up",
"speed": 12.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": false,
"name": "prepate_left",
"speed": 1.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "none",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": false,
"name": "prepare_down",
"speed": 1.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": false,
"name": "prepare_right",
"speed": 1.0
} ]

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 3072, 512, 512 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 3072, 512, 512 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 1024, 512, 512 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 1024, 512, 512 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 7168, 512, 512 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 7168, 512, 512 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 6656, 512, 512 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1536, 6656, 512, 512 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1024, 6656, 512, 512 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 7168, 512, 512 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 7168, 512, 512 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1024, 7168, 512, 512 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1536, 7168, 512, 512 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 2560, 512, 512 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1536, 2560, 512, 512 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1024, 2560, 512, 512 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 6144, 512, 512 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 6144, 512, 512 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1024, 6144, 512, 512 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1536, 6144, 512, 512 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 7680, 512, 512 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 7680, 512, 512 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1024, 7680, 512, 512 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1536, 7680, 512, 512 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 6656, 512, 512 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 7168, 512, 512 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1536, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1024, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 4096, 512, 512 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 4096, 512, 512 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1024, 4096, 512, 512 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1536, 4096, 512, 512 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 1024, 512, 512 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 1024, 512, 512 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1024, 1024, 512, 512 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1536, 1024, 512, 512 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 3584, 512, 512 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 3584, 512, 512 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1024, 3584, 512, 512 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1536, 3584, 512, 512 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 2048, 512, 512 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 2048, 512, 512 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1024, 2048, 512, 512 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1536, 2048, 512, 512 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 3584, 512, 512 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 3584, 512, 512 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 1536, 512, 512 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 1536, 512, 512 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1024, 1536, 512, 512 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1536, 1536, 512, 512 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 4608, 512, 512 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1536, 4608, 512, 512 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1024, 4608, 512, 512 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 5632, 512, 512 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 5120, 512, 512 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 5632, 512, 512 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 5632, 512, 512 )

[sub_resource type="AtlasTexture" id=66]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1024, 5632, 512, 512 )

[sub_resource type="AtlasTexture" id=67]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1536, 5632, 512, 512 )

[sub_resource type="AtlasTexture" id=68]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 5120, 512, 512 )

[sub_resource type="AtlasTexture" id=69]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 5120, 512, 512 )

[sub_resource type="AtlasTexture" id=70]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1024, 5120, 512, 512 )

[sub_resource type="AtlasTexture" id=71]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1536, 5120, 512, 512 )

[sub_resource type="AtlasTexture" id=72]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 3072, 512, 512 )

[sub_resource type="AtlasTexture" id=73]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 3072, 512, 512 )

[sub_resource type="AtlasTexture" id=74]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1024, 3072, 512, 512 )

[sub_resource type="AtlasTexture" id=75]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1536, 3072, 512, 512 )

[sub_resource type="AtlasTexture" id=76]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 1536, 512, 512 )

[sub_resource type="AtlasTexture" id=77]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 1536, 512, 512 )

[sub_resource type="AtlasTexture" id=78]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=79]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=80]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=81]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1024, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=82]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1536, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=83]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 5120, 512, 512 )

[sub_resource type="AtlasTexture" id=84]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 5120, 512, 512 )

[sub_resource type="SpriteFrames" id=85]
animations = [ {
"frames": [ SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "prepare_up",
"speed": 4.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "prepare_down",
"speed": 4.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "prepare_right",
"speed": 4.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 15 ) ],
"loop": true,
"name": "walk_right",
"speed": 4.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": false,
"name": "attack_right",
"speed": 8.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 22 ) ],
"loop": true,
"name": "walk_up",
"speed": 4.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": true,
"name": "stand_right",
"speed": 4.0
}, {
"frames": [ SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ) ],
"loop": false,
"name": "death_right",
"speed": 12.0
}, {
"frames": [ SubResource( 32 ), SubResource( 33 ), SubResource( 32 ) ],
"loop": false,
"name": "hurt_right",
"speed": 9.0
}, {
"frames": [ SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 35 ) ],
"loop": true,
"name": "walk_down",
"speed": 4.0
}, {
"frames": [ SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ) ],
"loop": true,
"name": "stand_left",
"speed": 4.0
}, {
"frames": [ SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ) ],
"loop": false,
"name": "attack_down",
"speed": 8.0
}, {
"frames": [ SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ) ],
"loop": false,
"name": "death_up",
"speed": 12.0
}, {
"frames": [ SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ) ],
"loop": true,
"name": "stand_up",
"speed": 4.0
}, {
"frames": [ SubResource( 53 ), SubResource( 54 ), SubResource( 53 ) ],
"loop": false,
"name": "hurt_up",
"speed": 9.0
}, {
"frames": [ SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ) ],
"loop": false,
"name": "death_down",
"speed": 12.0
}, {
"frames": [ SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 60 ) ],
"loop": true,
"name": "walk_left",
"speed": 4.0
}, {
"frames": [ SubResource( 62 ), SubResource( 63 ), SubResource( 62 ) ],
"loop": false,
"name": "hurt_left",
"speed": 9.0
}, {
"frames": [ SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ) ],
"loop": false,
"name": "death_left",
"speed": 12.0
}, {
"frames": [ SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ) ],
"loop": false,
"name": "attack_left",
"speed": 8.0
}, {
"frames": [ SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ) ],
"loop": false,
"name": "attack_up",
"speed": 8.0
}, {
"frames": [ SubResource( 76 ), SubResource( 77 ), SubResource( 78 ) ],
"loop": false,
"name": "hurt_down",
"speed": 9.0
}, {
"frames": [ SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ) ],
"loop": true,
"name": "stand_down",
"speed": 4.0
}, {
"frames": [ SubResource( 83 ), SubResource( 84 ) ],
"loop": true,
"name": "prepare_left",
"speed": 4.0
} ]

[sub_resource type="AtlasTexture" id=86]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=87]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1024, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=88]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=89]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 512, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=90]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1536, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=91]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 512, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=92]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 3072, 512, 512 )

[sub_resource type="AtlasTexture" id=93]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1024, 3072, 512, 512 )

[sub_resource type="AtlasTexture" id=94]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 3584, 512, 512 )

[sub_resource type="AtlasTexture" id=95]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 512, 3072, 512, 512 )

[sub_resource type="AtlasTexture" id=96]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1536, 3072, 512, 512 )

[sub_resource type="AtlasTexture" id=97]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 512, 3584, 512, 512 )

[sub_resource type="AtlasTexture" id=98]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 2048, 512, 512 )

[sub_resource type="AtlasTexture" id=99]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1024, 2048, 512, 512 )

[sub_resource type="AtlasTexture" id=100]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 2560, 512, 512 )

[sub_resource type="AtlasTexture" id=101]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1536, 2048, 512, 512 )

[sub_resource type="AtlasTexture" id=102]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 512, 2048, 512, 512 )

[sub_resource type="AtlasTexture" id=103]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 512, 2560, 512, 512 )

[sub_resource type="SpriteFrames" id=104]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": false,
"name": "prepare_up",
"speed": 1.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": false,
"name": "none",
"speed": 1.0
}, {
"frames": [ SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ) ],
"loop": true,
"name": "prepare_down",
"speed": 12.0
}, {
"frames": [ SubResource( 92 ), SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ) ],
"loop": true,
"name": "prepare_right",
"speed": 12.0
}, {
"frames": [ SubResource( 98 ), SubResource( 99 ), SubResource( 100 ), SubResource( 101 ), SubResource( 102 ), SubResource( 103 ) ],
"loop": true,
"name": "prepare_left",
"speed": 12.0
} ]

[sub_resource type="AtlasTexture" id=105]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=106]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1024, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=107]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=108]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 512, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=109]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1536, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=110]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 512, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=111]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 3072, 512, 512 )

[sub_resource type="AtlasTexture" id=112]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1024, 3072, 512, 512 )

[sub_resource type="AtlasTexture" id=113]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 3584, 512, 512 )

[sub_resource type="AtlasTexture" id=114]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 512, 3072, 512, 512 )

[sub_resource type="AtlasTexture" id=115]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1536, 3072, 512, 512 )

[sub_resource type="AtlasTexture" id=116]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 512, 3584, 512, 512 )

[sub_resource type="AtlasTexture" id=117]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 2048, 512, 512 )

[sub_resource type="AtlasTexture" id=118]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1024, 2048, 512, 512 )

[sub_resource type="AtlasTexture" id=119]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 2560, 512, 512 )

[sub_resource type="AtlasTexture" id=120]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 512, 2048, 512, 512 )

[sub_resource type="AtlasTexture" id=121]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1536, 2048, 512, 512 )

[sub_resource type="AtlasTexture" id=122]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 512, 2560, 512, 512 )

[sub_resource type="SpriteFrames" id=123]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": false,
"name": "prepare_up",
"speed": 1.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": false,
"name": "none",
"speed": 1.0
}, {
"frames": [ SubResource( 105 ), SubResource( 106 ), SubResource( 107 ), SubResource( 108 ), SubResource( 109 ), SubResource( 110 ) ],
"loop": true,
"name": "prepare_down",
"speed": 12.0
}, {
"frames": [ SubResource( 111 ), SubResource( 112 ), SubResource( 113 ), SubResource( 114 ), SubResource( 115 ), SubResource( 116 ) ],
"loop": true,
"name": "prepare_right",
"speed": 12.0
}, {
"frames": [ SubResource( 117 ), SubResource( 118 ), SubResource( 119 ), SubResource( 120 ), SubResource( 121 ), SubResource( 122 ) ],
"loop": true,
"name": "prepare_left",
"speed": 12.0
} ]

[node name="UndeadDragon" type="Node2D"]
scale = Vector2( 4, 4 )
script = ExtResource( 2 )

[node name="ChangingBodyParts" type="Node2D" parent="."]

[node name="SideFlameBehind" type="AnimatedSprite" parent="ChangingBodyParts"]
visible = false
position = Vector2( 16.431, 11.26 )
scale = Vector2( 0.1, 0.135 )
frames = SubResource( 7 )
animation = "none"
playing = true

[node name="ForwardFlameBehind" type="AnimatedSprite" parent="ChangingBodyParts"]
position = Vector2( 16.431, 11.26 )
scale = Vector2( 0.1, 0.135 )
frames = SubResource( 7 )
animation = "none"
playing = true

[node name="Body" type="AnimatedSprite" parent="ChangingBodyParts"]
position = Vector2( 16.4309, 11.26 )
scale = Vector2( 0.1, 0.135 )
frames = SubResource( 85 )
animation = "walk_right"
frame = 3
playing = true

[node name="SideFlameFront" type="AnimatedSprite" parent="ChangingBodyParts"]
visible = false
position = Vector2( 16.431, 11.26 )
scale = Vector2( 0.1, 0.135 )
frames = SubResource( 104 )
animation = "none"
playing = true

[node name="ForwardFlameFront" type="AnimatedSprite" parent="ChangingBodyParts"]
position = Vector2( 16.431, 11.26 )
scale = Vector2( 0.1, 0.135 )
frames = SubResource( 123 )
animation = "none"
playing = true

[node name="Stars" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 0.26915, -0.163147 )
scale = Vector2( 0.05, 0.02 )
frame = 3

[node name="Health Bar" parent="." instance=ExtResource( 4 )]
position = Vector2( 16.5, -0.25 )

[node name="BloodExplosion" parent="." instance=ExtResource( 9 )]
visible = false
position = Vector2( 18.8787, 17.2435 )
scale = Vector2( 0.25, 0.25 )
